fix(header): align responsive nav to look like header nav

--- a/projects/angular/src/layout/nav/_header.clarity.scss
+++ b/projects/angular/src/layout/nav/_header.clarity.scss
@@ -386,12 +386,6 @@
         position: relative;
       }
 
-      &:first-of-type::before,
-      &:last-of-type::after {
-        @include header-section-divider();
-        left: auto;
-      }
-
       &:first-of-type::before {
         left: 0;
       }
